--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,39 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>ExcelImport</display-name>
-  <welcome-file-list>
-    <welcome-file>login.html</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>com.wang.servlet.LoginServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/LoginServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>HelloWorld</servlet-name>
-    <servlet-class>test.com.servlet.HelloWorld</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>HelloWorld</servlet-name>
-    <url-pattern>/Test/HelloWorld</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>HelloForm</servlet-name>
-    <servlet-class>test.com.servlet.HelloForm</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>HelloForm</servlet-name>
-    <url-pattern>/Test/HelloForm</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>CheckBox</servlet-name>
-    <servlet-class>test.com.servlet.CheckBox</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CheckBox</servlet-name>
-    <url-pattern>/ExcelImport/CheckBox</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>ExcelImport</display-name>
+	<welcome-file-list>
+		<welcome-file>login.html</welcome-file>
+	</welcome-file-list>
+	<filter>
+		<filter-name>LogFilter</filter-name>
+		<filter-class>test.com.servlet.LogFilter</filter-class>
+		<init-param>
+			<param-name>Site</param-name>
+			<param-value>runoob course</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>LogFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<servlet>
+		<servlet-name>DisplayHeader</servlet-name>
+		<servlet-class>test.com.servlet.DisplayHeader</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DisplayHeader</servlet-name>
+		<url-pattern>/ExcelImport/DisplayHeader</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>com.login.servlet.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/LoginServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>HelloWorld</servlet-name>
+		<servlet-class>test.com.servlet.HelloWorld</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HelloWorld</servlet-name>
+		<url-pattern>/Test/HelloWorld</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>HelloForm</servlet-name>
+		<servlet-class>test.com.servlet.HelloForm</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HelloForm</servlet-name>
+		<url-pattern>/Test/HelloForm</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>CheckBox</servlet-name>
+		<servlet-class>test.com.servlet.CheckBox</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CheckBox</servlet-name>
+		<url-pattern>/ExcelImport/CheckBox</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Refresh</servlet-name>
+		<servlet-class>test.com.servlet.Refresh</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Refresh</servlet-name>
+		<url-pattern>/ExcelImport/Refresh</url-pattern>
+	</servlet-mapping>
 </web-app>
