--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>ExcelImport</display-name>
 	<welcome-file-list>
-		<welcome-file>login.html</welcome-file>
+		<welcome-file>Login.html</welcome-file>
 	</welcome-file-list>
 	<filter>
 		<filter-name>LogFilter</filter-name>
